@@ -364,9 +364,7 @@ proc si_check {} {
        set cur_adapter [lindex $this(adapters) 0]
        set_current_cluster_config_nr $this(ts_cluster_nr,$cur_adapter)
        ts_log_heading "Step 4: Submitting $tries sleeper jobs to adapter '$cur_adapter' ..."
-       for {set i 0} {$i < $tries} {incr i} {
-          submit_job "$this(sleeper_with_no_output) 150"
-       }
+       submit_job "-t 1-$tries $this(sleeper_with_no_output) 150"
 
        #check if resource was moved to first service
        unset -nocomplain exp_res_info
@@ -387,9 +385,7 @@ proc si_check {} {
        set cur_adapter [lindex $this(adapters) 1]
        set_current_cluster_config_nr $this(ts_cluster_nr,$cur_adapter)
        ts_log_heading "Step 5: Submitting $tries sleeper jobs to adapter '$cur_adapter' ..."
-       for {set i 0} {$i < $tries} {incr i} {
-          submit_job "$this(sleeper_with_no_output) 150"
-       }
+       submit_job "-t 1-$tries $this(sleeper_with_no_output) 150"
        unset -nocomplain exp_res_info
        foreach res $res_for_adapter($cur_adapter) {
           set exp_res_info($res,service) $cur_adapter
@@ -435,9 +431,7 @@ proc si_check {} {
        foreach adapter $this(adapters) {
           set_current_cluster_config_nr $this(ts_cluster_nr,$adapter)
           ts_log_heading "Step 7: Submitting $tries sleeper jobs to adapter '$adapter' ..."
-          for {set i 0} {$i < $tries} {incr i} {
-             submit_job "$this(sleeper_with_no_output) 200"
-          }
+          submit_job "-t 1-$tries $this(sleeper_with_no_output) 200"
           foreach resource $res_for_adapter($adapter) {
              set exp_res_info($resource,service) "$adapter"
              set exp_res_info($resource,flags) "{}"
