@@ -1,3 +1,8 @@
+TB-2009-03-30-1: Bugfix:     Test for issue 619 now cleans up spool dir files
+                 Enhancem:   SI use case test submits array jobs as performance
+                             improvement
+                 Review:     RH 
+
 CR-2009-03-30-0: Enhancem.:  Allow larger timeouts for vi commands
                  Review:     AA
 
